Fix radio image toggeling problem in production mode and half point visibility

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -54,7 +54,7 @@ ul.list_header {
     margin-top: -5px;
     span {
       height: 22px;
-      background: url("sp_sum.png") no-repeat center;
+      background: url("sp_sum_heavy.png") no-repeat center;
       font-size: 11pt;
       color: white;
       width: 30px;
@@ -65,6 +65,7 @@ ul.list_header {
     img#half_story_point_small {
       padding-top: 8px;
       margin-right: -22px;
+      width: 21px;
     }
 
     img#half_story_point {
